cleanup, buttons align, gallery images fix (site)

--- a/site/index.css
+++ b/site/index.css
@@ -232,51 +232,39 @@ body {
 	border-radius: 50%;
 }
 
-.button-top {
+.button {
 	position: fixed;
 	display: block;
+	outline: none;
+	cursor: pointer;
+	padding: 8px 6px 6px 6px;
+	border-radius: 7px;
+	
+}
+
+.button-top {
 	visibility: hidden;
 	bottom: 10px;
 	right: 25px;
 	z-index: 7;
-	outline: none;
-	/* background-color: black; */
-	/* color: white; */
-	cursor: pointer;
-	padding: 8px 6px 6px 6px;
-	border-radius: 7px;
-}
-
-.button-top .material-icons {
-	font-size: 2rem;
 }
 
 .button-editor {
-  position: fixed;
-  display: block;
-  top: 40px;
-  right: 25px;
-  z-index: 11;
-  outline: none;
-  /* background-color: black; */
-  /* color: white; */
-  cursor: pointer;
-  padding: 8px 6px 6px 6px;
-  border-radius: 7px;
+	top: 50px;
+	right: 25px;
+	z-index: 11;
 }
 
 .button-close {
-  position: fixed;
-  display: block;
-  top: 10px;
-  right: 25px;
-  z-index: 9;
-  outline: none;
-  /* background-color: black; */
-  /* color: white; */
-  cursor: pointer;
-  padding: 8px 6px 6px 6px;
-  border-radius: 7px;
+	top: 10px;
+	right: 25px;
+	z-index: 9;
+}
+
+.button-top .material-icons,
+.button-editor .material-icons,
+.button-close .material-icons {
+	font-size: 2rem;
 }
 
 .viewer {
@@ -331,7 +319,7 @@ body {
 	}
 	.single .text,
 	.one .text {
-		font-size: 0.8em;
+		font-size: 0.9em;
 	}
 	.single .footer {
 		visibility: hidden;
